@@ -11,6 +11,8 @@ Broker:
   set to true. Closes #1729.
 - Fix `autosave_interval` not being triggered by messages being delivered.
   Closes #1726.
+- Fix websockets clients sometimes not being disconnected promptly.
+  Closes #1718.
 
 Client library:
 - Improved documentation around connect callback return codes. Close #1730.
